<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_menu2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_skin"
        style="@style/round_button"
        android:text="@string/skin_button"
        />


        </LinearLayout>
    <Button
        style="@style/button_style1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_quick_start"
        android:text="@string/quickstart_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:background="#7c267c76">
        <Button
            android:id="@+id/button_start"
            style="@style/button_style2"
            android:text="@string/start_button" />
        <Button
            android:id="@+id/button_minigames"
            style="@style/button_style2"
            android:text="@string/mini_game_button" />
        <Button
            android:id="@+id/button_highscores"
            style="@style/button_style2"
            android:text="@string/highscore_button" />
        <Button
            android:id="@+id/button_settings"
            style="@style/button_style2"
            android:text="@string/action_settings" />
    </LinearLayout>
</LinearLayout>